--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Set up Node.js
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Build Astro frontend
+        run: |
+          cd frontend
+          npm run build
+
       # Set up Python (no need for full Anaconda in CI)
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
